--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Pedro Morante",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
