--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://rest_api_node_ts_28m2_user:NhVWsnzSfpv9tPR0I5g9Fd3NdEq6xeVd@dpg-csndgeaj1k6c73b1kkog-a.oregon-postgres.render.com/rest_api_node_ts_28m2?ssl=true
 PORT=4000
+FRONTEND_URL=http://localhost:5173
